# gapps

./: .flake8  .gitignore  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: publish-to-pypi.yml  test.yml
cardservice/: __init__.py  api.py  constants.py  decorators.py  models.py  utilities.py
cardservice/tests/: test_cards.py  test_decorators.py
docs/examples/: card_builder_templates.py  cats.py  simple_demo.py
docs/source/: conf.py  index.rst  installation.rst  usage.rst
gapps/: __init__.py
gapps/cardservice/: api.py  constants.py  decorators.py  models.py  utilities.py
gapps/cardservice/tests/: test_cards.py  test_decorators.py  test_models.py  test_utilities.py
