[build-system]
requires = ["flit-core >= 3.4"]
build-backend = "flit_core.buildapi"

[project]
name =  "cardservice"
version = "0.1.0"
description = "python interface of the google card service"
readme = "README.md"
requires-python = ">=3.8"
license.file = "LICENSE"
keywords = ["appscript", "cardservice", "google workspace add-ons"]
authors = [
    {name = "Serge Koudoro", email = "skab12@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "pep517 >= 0.9.1",
]

[project.optional-dependencies]
docs = [
    "codecov",
    "coverage",
    "flake8",
    "pytest",
    "sphinx",
    "ipython",
    "ipdb",
    "matplotlib",
    "numpydoc",
    "sphinx-copybutton",
    "sphinx_rtd_theme",
    "responses",
]

test = [
    "black==22.1.0",
    "flake8==4.0.1",
    "pre-commit==2.17.0",
    "pylint==2.12.2",
    "pytest==7.1.0",
]

typing = [
  "importlib-metadata >= 5.1",
  "mypy == 0.991",
  "tomli",
  "typing-extensions >= 3.7.4.3",
]

[project.urls]
Documentation = "https://github.com/skoudoro/cardservice/tree/main#readme"
Source = "https://github.com/skoudoro/cardservice"
Tracker = "https://github.com/skoudoro/cardservice/issues"

[tool.flit.module]
name = "cardservice"

[tool.black]
line-length = 90
fast = true

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 100

