[build-system]
requires = ["setuptools>=65.4", "setuptools_scm[toml]>=7.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name =  "gapps"
description = "python interface of the google apps service"
readme = "README.md"
requires-python = ">=3.9"
license.file = "LICENSE"
keywords = ["appscript", "cardservice", "google workspace add-ons",
            "docs", "sheet", "calendar", "gmail", "forms", "slide", "drive"]
authors = [
    {name = "Serge Koudoro", email = "skab12@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "pep517 >= 0.9.1",
    "dataclasses-json >= 0.5.7",
    "pydantic >= 1.9.0",
    "google-auth >= 2.12.0",
    "requests",
]

dynamic = ["version"]

[tool.setuptools_scm]
write_to = "gapps/_version.py"

[project.optional-dependencies]
demo = [
    "fastapi",
    "uvicorn",
    "google-api-python-client>=2.68.0",
]

docs = [
    "codecov",
    "coverage",
    "flake8",
    "pytest",
    "sphinx",
    "ipython",
    "ipdb",
    "matplotlib",
    "numpydoc",
    "sphinx-copybutton",
    "sphinx_rtd_theme",
    "responses",
]

test = [
    "black==22.1.0",
    "flake8==4.0.1",
    "pre-commit==2.17.0",
    "pylint==2.12.2",
    "pytest==7.1.0",
    "pip-conflict-checker>=0.6.0",
]

typing = [
  "importlib-metadata >= 5.1",
  "mypy == 0.991",
  "tomli",
  "typing-extensions >= 3.7.4.3",
]

[project.urls]
Documentation = "https://github.com/skoudoro/gapps/tree/main#readme"
Source = "https://github.com/skoudoro/gapps"
Tracker = "https://github.com/skoudoro/gapps/issues"


[tool.black]
line-length = 90
fast = true

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 100
